Poprawione formatowanie dokumentu

--- a/2011/21/275.md
+++ b/2011/21/275.md
@@ -25,7 +25,9 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
 	
 	2. instalację odnawialnego źródła energii,
 
-	3. podłączenie ciepłej wody użytkowej związane z likwidacją palenisk gazowych, zwany dalej Programem.
+	3. podłączenie ciepłej wody użytkowej związane z likwidacją palenisk gazowych,
+	
+	zwany dalej Programem.
 
     § 2. Ilekroć w uchwale jest mowa o:
 
