UCHWAŁA NR LXI/864/12 RADY MIASTA KRAKOWA z dnia 21 listopada 2012 r. w sprawie zmiany uchwały Nr XXI/275/11

--- a/2011/21/275.md
+++ b/2011/21/275.md
@@ -25,7 +25,7 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
 	
 	2. instalację odnawialnego źródła energii,
 
-	3. podłączenie ciepłej wody użytkowej związane z likwidacją palenisk gazowych,
+	3. podłączenie ciepłej wody użytkowej związane z likwidacją palenisk węglowych,
 	
 	zwany dalej Programem.
 
@@ -39,6 +39,7 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
     5. Osobie fizycznej – rozumie się przez to osoby określone w Tytule II, Księgi Pierwszej ustawy z dnia 23 kwietnia 1964 Kodeks Cywilny ( Dz. U. 1964 Nr 16 poz. 63 z późn. zm.).
     6. POP - rozumie się przez to Program Ochrony Powietrza dla województwa małopolskiego, obejmujący aglomerację krakowską, uchwalony Uchwałą nr XXIX/612/09 Sejmiku Województwa Małopolskiego z dnia 21 grudnia 2009 r.
     7. POŚ - rozumie się przez to Program Ochrony Środowiska dla Miasta Krakowa, przyjęty Uchwałą nr LXXV/737/05 Rady Miasta Krakowa z dnia 13 kwietnia 2005 r.
+    7. Porozumieniu - rozumie się przez to zawarte Porozumienie z dnia 15 maja 2012 roku pomiędzy następującymi sygnatariuszami: Województwem Małopolskim, Wojewódzkim Funduszem Ochrony Środowiska i Gospodarki Wodnej, Gminą Miejską Kraków-Urzędem Miasta Krakowa, Miejskim Przedsiębiorstwem Energetyki Cieplnej S.A w Krakowie, Elektrociepłownią Kraków S.A w Krakowie, Elektrownią Skawina S.A, Polskim Górnictwem Naftowym i Gazownictwem S.A, TAURON Sprzedaż Sp. z o. o w sprawie wspólnych działań zmierzających do zmniejszenia ilości emitowanych do atmosfery zanieczyszczeń pochodzących z procesów spalania paliw stałych.
     8. Prawo ochrony środowiska – rozumie się przez to ustawę z dnia 27 kwietnia 2001 r. Prawo ochrony środowiska ( tekst jedn. Dz. U. z 2008 r. Nr 25, poz. 150 z późn. zm.).
     9. PROGRAMIE – rozumie się przez to Program Ograniczania Niskiej Emisji dla Miasta Krakowa, określający zasady udzielania dotacji na realizację zadań, dofinansowanych z budżetu Miasta Krakowa.
     10. Przedsiębiorcy - rozumie się przez to, podmiot prowadzący działalność gospodarczą bez względu na jego formę prawną, zgodnie z Rozporządzeniem Komisji (WE) nr 800/2008 z dnia 6 sierpnia 2008 r. uznającym niektóre rodzaje pomocy za zgodne ze wspólnym rynkiem w zastosowaniu art. 87 i 88 Traktatu (ogólne rozporządzenie w sprawie wyłączeń blokowych).
@@ -63,7 +64,9 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
     1. Program prowadzony jest w celu ograniczania emisji zanieczyszczeń, w szczególności pyłowych, z pieców oraz kotłowni opalanych paliwem stałym, oraz ograniczania emisji innych substancji stanowiących o przekroczeniu standardów jakości powietrza w Krakowie.
 	2. W ramach Programu mogą być realizowane wyłącznie inwestycje nieoddziałowujące znacząco na środowisko tj. w przypadku spalania paliw gazowych i olejowych, instalacje o mocy cieplnej do 25 MW.
 
-      § 4. Zadania wykonywane na zasadach określonych w niniejszym Programie dofinansowane są z budżetu Miasta Krakowa, do wysokości środków ustalanych corocznie w tym budżecie na realizację Programu.
+    § 4. 
+    1. Zadania wykonywane na zasadach określonych w niniejszym Programie dofinansowane są z budżetu Miasta Krakowa, do wysokości środków ustalanych corocznie w tym budżecie na realizację Programu.
+	2. Zadania wykonywane na zasadach określonych w niniejszym Programie mogą być również dofinansowane w formie pomocy finansowej lub rzeczowej, na warunkach określonych w Porozumieniu, o którym mowa w § 2 pkt 8.
 
 2. Rozdział 2. Ogólne zasady udzielania dotacji w ramach PROGRAMU.
  
@@ -87,9 +90,9 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
     2. Dotacja może być udzielona wyłącznie na dofinansowanie tzw. kosztów koniecznych realizacji zadania, w szczególności:    
   	    1. kosztów wykonania demontażu palenisk węglowych,
 	    2. kosztów zakupu i montażu nowego źródła ogrzewania,
-	    3. kosztów zakupu, montażu, wymiany lub modernizacji instalacji związanej z nowym źródłem ogrzewania,
+	    3. kosztów zakupu, montażu, wymiany lub modernizacji instalacji lub przystosowania pomieszczenia związanego z nowym źródłem ogrzewania,
 	    4. kosztów modernizacji systemu odprowadzania spalin niezbędnego do prawidłowego funkcjonowania nowego źródła ogrzewania,
-	    5. kosztów podłączenia do miejskiej sieci ciepłowniczej w zakresie wykonania wewnętrznej instalacji centralnego ogrzewania oraz ciepłej wody użytkowej z wyłączeniem węzła ciepła,
+	    5. kosztów podłączenia do miejskiej sieci ciepłowniczej w zakresie wykonania wewnętrznej instalacji centralnego ogrzewania oraz ciepłej wody użytkowej z wyłączeniem urządzeń węzła cieplnego,
 	    6. kosztów zakupu i montażu instalacji odnawialnego źródła energii.
 	   
     3. Dotacje nie mogą być wykorzystane na:
@@ -100,7 +103,7 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
          4. zakup urządzeń grzewczych nie stanowiących trwałego wyposażenia mieszkań.
 
 	4. Przyznawanie dotacji odbywa się na wniosek o udzielenie dotacji, zwany dalej wnioskiem, złożony w sposób określony w ogłoszeniu o naborze wniosków w danym roku w ramach PROGRAMU, zamieszczonym w Biuletynie Informacji Publicznej.
-	5. W przypadku wystąpienia wolnych środków finansowych zarezerwowanych w budżecie Miasta Krakowa na zadania, o których mowa w § 6 ust. 1 lub pozyskania dodatkowych środków finansowych z innych źródeł, dopuszcza się ogłoszenie kolejnego naboru wniosków w roku budżetowym.
+	5. W przypadku wystąpienia wolnych środków finansowych zarezerwowanych w budżecie Miasta Krakowa na zadania, o których mowa w § 6 ust. 1 lub pozyskania dodatkowych środków finansowych z innych źródeł, dopuszcza się możliwość kontynuowania rozpatrywania złożonych wniosków lub ogłoszenia kolejnego naboru wniosków w roku budżetowym. Realizacja takich wniosków odbywa się zgodnie z zasadami regulującymi wydatkowanie tych środków.
 	6. Warunkiem przekazania dotacji jest zawarcie umowy w formie pisemnej i jej realizacja na zasadach określonych w PROGRAMIE oraz ogłoszeniu, o którym mowa w pkt 4.
 	7. Rozstrzygnięcie o przyznaniu dotacji nie jest decyzją administracyjną w rozumieniu przepisów Kodeksu postępowania administracyjnego i nie przysługuje na nie odwołanie.
 	8. Dotacja nie może pokrywać wydatków przeznaczonych na ten sam cel finansowanych z innych bezzwrotnych źródeł (zakaz tzw. podwójnego finansowania).
@@ -108,10 +111,9 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
     1. Przyznawanie dotacji odbywa się do wysokości środków finansowych zarezerwowanych na ten cel w budżecie Miasta Krakowa.
     2. Wysokość środków, o których mowa w § 7 ust. 1, podawana będzie corocznie w ogłoszeniu o naborze wniosków do PROGRAMU.
 
-    § 8. 
-    
-    1. Ogłoszenie o naborze wniosków może nastąpić na podstawie projektu uchwały budżetowej przekazanego Radzie Miasta Krakowa na zasadach określonych w przepisach ustawy z dnia 27 sierpnia 2009 roku o finansach publicznych ( Dz. U. nr 157, poz. 1240 z późn. zm.).
-    
+    § 8.     
+    1. Ogłoszenie o naborze wniosków może nastąpić na podstawie projektu uchwały budżetowej przekazanego Radzie Miasta Krakowa na zasadach określonych w przepisach ustawy z dnia 27 sierpnia 2009 roku o finansach publicznych ( Dz. U. nr 157, poz. 1240 z późn. zm.).    
+
 	2. Złożone wnioski opiniuje komisja powołana przez Prezydenta Miasta Krakowa.
 	
 	3. W ramach opiniowania, o którym mowa w ust. 2, dokonywana jest ocena formalna i merytoryczna wniosków oraz określane są propozycje kwot dotacji.
@@ -126,12 +128,12 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
 
 	§ 10. 
 	1. Osoby fizyczne będą mogły starać się o uzyskanie dotacji do zadań, które mają zostać wykonane z zastrzeżeniem, że wykonanie to nastąpi w roku, określonym w ogłoszeniu, o którym mowa w § 6 ust. 4.
-	2. Dotacja będzie przydzielana w wysokości do 90% poniesionych kosztów, ale nie więcej niż:
-		1. 2000 zł za każde zlikwidowane palenisko węglowe w przypadku zmiany systemu ogrzewania z węglowego na gazowe, elektryczne, olejowe lub odnawialne źródło energii,
-		2. 2000 zł za każde zlikwidowane palenisko węglowe w przypadku podłączenia do miejskiej sieci ciepłowniczej,
-		3. 400 zł za każdy kW kotłowni zainstalowanej w przypadku likwidacji kotłowni węglowej bądź instalacji pompy ciepła,
-		4. 1 000 zł za każdy metr kwadratowy w przypadku zainstalowania kolektora słonecznego,
-		5. 1 000 zł za każde zlikwidowane palenisko gazowe w przypadku podłączenia centralnej ciepłej wody użytkowej.
+	2. Dotacja będzie przydzielana w wysokości do 100% poniesionych kosztów, ale nie więcej niż:
+		1. 900 zł za każdy kW:
+			a. mocy nowego źródła ogrzewania w przypadku likwidacji palenisk lub kotłowni węglowych,
+			b. mocy nowego źródła centralnej ciepłej wody użytkowej,
+			c. mocy zainstalowanej pompy ciepła,
+		2. 1 000 zł za każdy metr kwadratowy w przypadku zainstalowania kolektora słonecznego.
 
 	§ 11. Wnioski zostaną odrzucone z powodu następujących błędów formalnych:
 		
@@ -144,19 +146,20 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
 	7. złożenie wniosku nie podpisanego przez beneficjenta.
 
 	§ 12. 
-	
-	1. Wzór wniosku oraz wzór wniosku o rozliczenie dotacji wraz z wykazem niezbędnych dokumentów, które należy dołączyć do nich będzie stanowić załącznik do ogłoszenia o udzieleniu dotacji na dany rok.
-	
+	1. Wzór wniosku o udzielenie dotacji oraz wzór wniosku o rozliczenie dotacji wraz z wykazem niezbędnych dokumentów, które należy dołączyć do nich będzie stanowić załącznik do ogłoszenia o udzieleniu dotacji na dany rok.
+
 	2. Wnioski wraz z wymaganymi załącznikami należy składać w miejscu i formie wskazanym w ogłoszeniu o udzielaniu dotacji.
 	
 	§ 13. 
 	
 	1. Wnioski rozpatrywane będą według następujących kryteriów:
-		1. wielkość efektu ekologicznego osiągniętego poprzez realizację zadania,
-		2. zastosowany system ogrzewania, wg priorytetów określonych w POP,
-		3. termin i poprawność złożenia wniosku,
-		4. realizacja zadania na terenach uzdrowiskowych w Swoszowicach - Dzielnica X Swoszowice,
-		5. lokalizacja zadania, według priorytetów określonych w POP.
+		1. zawarcia umów przyłączeniowych na realizację zadania z sygnatariuszami Porozumienia, o którym mowa § 2 pkt 8,
+		2. możliwości korzystania z pomocy, o której mowa w paragrafie 4 ust. 2 Programu,
+		3. wielkości efektu ekologicznego osiągniętego poprzez realizację zadania,
+		4. zastosowanego systemu ogrzewania, wg priorytetów określonych w POP,
+		5. terminu i poprawności złożenia wniosku,
+		6. realizacji zadania na terenie Osiedla Uzdrowisko Swoszowice, utworzonego w ramach Dzielnicy X Swoszowice,
+		7. lokalizacji zadania, według priorytetów określonych w POP.
 
 	2. Informacja o wagach kryteriów oraz priorytetach POP umieszczona będzie w ogłoszeniu o naborze wniosków, o którym mowa w § 6 ust. 4.
 
@@ -201,17 +204,12 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
 	
 	2. obejmujących instalację odnawialnych źródeł energii udzielana jest w ramach programu pomocowego zgodnie z warunkami określonymi w Rozporządzeniu Rady Ministrów z dnia 22 grudnia 2006 r. w sprawie ustanowienia programu pomocowego w zakresie regionalnej pomocy publicznej na niektóre inwestycje w ochronie środowiska (Dz. U. z 2006 roku, Nr 246, poz. 1795 z późn. zm.).
 
-	§ 18. Dotacja będzie przydzielana w wysokości do 90% poniesionych kosztów, z zastrzeżeniem zapisów Rozporządzenia Rady Ministrów z dnia 13 października 2006 roku w sprawie ustalenia mapy pomocy regionalnej (Dz. U. Nr 190, poz. 1402), ale nie więcej niż:
-	
-	1. 2000 zł za każde zlikwidowane palenisko węglowe w przypadku zmiany systemu ogrzewania z węglowego na gazowe, elektryczne, olejowe lub odnawialne źródło energii,
-	
-	2. 2000 zł za każde zlikwidowane palenisko węglowe w przypadku podłączenia do miejskiej sieci ciepłowniczej,
-	
-	3. 400 zł za każdy kW kotłowni zainstalowanej w przypadku likwidacji kotłowni węglowej lub instalacji pompy ciepła,
-	
-	4. 1000 zł za każdy metr kwadratowy w przypadku zainstalowania kolektora słonecznego,
-	
-	5. 1000 zł za każde zlikwidowane palenisko gazowe w przypadku podłączenia centralnej ciepłej wody użytkowej.
+	§ 18. Dotacja będzie przydzielana w wysokości do 100 % poniesionych kosztów, z zastrzeżeniem zapisów rozporządzenia Rady Ministrów z dnia 13 października 2006 roku w sprawie ustalenia mapy pomocy regionalnej (Dz. U. Nr 190, poz. 1402), ale nie więcej niż:
+	1. 900 zł za każdy kW:
+	a. mocy nowego źródła ogrzewania w przypadku likwidacji palenisk lub kotłowni węglowych,
+	b. mocy nowego źródła centralnej ciepłej wody użytkowej,
+	c. mocy zainstalowanej pompy ciepła,
+	d. 1 000 zł za każdy metr kwadratowy w przypadku zainstalowania kolektora słonecznego.
 
 	§ 19. Wnioski zostają odrzucone z powodu następujących błędów formalnych:
 
@@ -230,30 +228,33 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
 	7. złożenie wniosku nie podpisanego przez beneficjenta.
 	
 	§ 20. 
-	
-	1. Wzór wniosku oraz wzór wniosku o rozliczenie dotacji wraz z wykazem niezbędnych dokumentów, w tym stosownych zaświadczeń lub oświadczeń, które należy dołączyć do tych wniosków, będzie stanowił załącznik do ogłoszenia o udzieleniu dotacji na dany rok.
-	
+
+	1. Wzór wniosku o udzielenie dotacji oraz wzór wniosku o rozliczenie dotacji wraz z wykazem niezbędnych dokumentów, które należy dołączyć do nich będzie stanowić załącznik do ogłoszenia o udzieleniu dotacji na dany rok.
+
 	2. Wnioski wraz z wymaganymi załącznikami należy składać w miejscu i formie wskazanym w ogłoszeniu o udzielaniu dotacji.
 	
 	3. Beneficjenci ubiegający się o udzielenie pomocy publicznej wraz z wnioskiem, o którym mowa w ust. 2, przedkładają również informacje oraz sprawozdania finansowe zgodne z Rozporządzeniem Rady Ministrów z dnia 29 marca 2010 r. w sprawie zakresu informacji przedstawianych przez podmiot ubiegający się o pomoc de minimis (Dz. U. Nr 53, poz. 311) oraz Rozporządzeniem Rady Ministrów z dnia 29 marca 2010 r. w sprawie zakresu informacji przedstawianych przez podmiot ubiegający się o pomoc inną niż de minimis lub pomoc de minimis w rolnictwie lub rybołówstwie (Dz. U. Nr 53, poz. 312), Rozporządzeniem Rady Ministrów z dnia 11 czerwca 2010 roku w sprawie informacji składanych przez podmioty ubiegające się o pomoc de minimis w rolnictwie lubrybołówstwie ( Dz. U. Nr 121, poz. 810).
 	
 	4. Beneficjenci ubiegający się o udzielenie pomocy publicznej zobowiązany jest do przedłożenia w żądanym terminie – na wniosek właściwego Wydziału – dodatkowych informacji niezbędnych dla jej oceny oraz prawidłowego udzielenia.
+	
 	§ 21. Prawidłowo złożone wnioski rozpatrywane będą z uwzględnieniem:
 	1. Zachowania wszystkich warunków, uprawniających do otrzymania pomocy, o której mowa w § 17, w tym w szczególności
 	
-		1. beneficjent prowadzący działalność gospodarczą (za wyjątkiem prowadzącego działalność w sektorze transportu drogowego), przy zachowaniu wszystkich warunków określonych w programie, może otrzymać dotację stanowiącą pomoc de minimis, jeżeli wartość pomocy brutto łącznie z wartością innej pomocy de minimis otrzymanej przez niego w okresie bieżącego roku kalendarzowego oraz dwóch poprzedzających go lat kalendarzowych nie przekracza kwoty stanowiącej 200 tys. Euro,
+	   1. beneficjent prowadzący działalność gospodarczą (za wyjątkiem prowadzącego działalność w sektorze transportu drogowego), przy zachowaniu wszystkich warunków określonych w programie, może otrzymać dotację stanowiącą pomoc de minimis, jeżeli wartość pomocy brutto łącznie z wartością innej pomocy de minimis otrzymanej przez niego w okresie bieżącego roku kalendarzowego oraz dwóch poprzedzających go lat kalendarzowych nie przekracza kwoty stanowiącej 200 tys. Euro,
 	
-		2. beneficjent prowadzący działalność gospodarczą w sektorze transportu drogowego, przy zachowaniu wszystkich warunków określonych w Programie, może otrzymać pomoc, o której mowa w § 17, jeżeli wartość tej pomocy brutto łącznie z wartością innej pomocy otrzymanej przez niego w okresie bieżącego roku kalendarzowego oraz dwóch poprzedzających go lat kalendarzowych nie przekracza kwoty stanowiącej 100 tys. Euro,
+	   2. beneficjent prowadzący działalność gospodarczą w sektorze transportu drogowego, przy zachowaniu wszystkich warunków określonych w Programie, może otrzymać pomoc, o której mowa w § 17, jeżeli wartość tej pomocy brutto łącznie z wartością innej pomocy otrzymanej przez niego w okresie bieżącego roku kalendarzowego oraz dwóch poprzedzających go lat kalendarzowych nie przekracza kwoty stanowiącej 100 tys. Euro,
 	
-		3. beneficjent prowadzący działalność gospodarczą w sektorze produkcji rolnej, przy zachowaniu wszystkich warunków określonych w Programie, może otrzymać pomoc, o której mowa w § 17, jeżeli wartość tej pomocy brutto łącznie z wartością innej pomocy otrzymanej przez niego w okresie bieżącego roku kalendarzowego oraz dwóch poprzedzających go lat kalendarzowych nie przekracza kwoty stanowiącej 7,5 tys. Euro,
-		4. maksymalnej intensywności regionalnej pomocy inwestycyjnej, o której mowa w Rozporządzeniu Rady Ministrów z dnia 13 października 2006 r. w sprawie ustalenia mapy pomocy regionalnej.
+	   3. beneficjent prowadzący działalność gospodarczą w sektorze produkcji rolnej, przy zachowaniu wszystkich warunków określonych w Programie, może otrzymać pomoc, o której mowa w § 17, jeżeli wartość tej pomocy brutto łącznie z wartością innej pomocy otrzymanej przez niego w okresie bieżącego roku kalendarzowego oraz dwóch poprzedzających go lat kalendarzowych nie przekracza kwoty stanowiącej 7,5 tys. Euro,
+	   4. maksymalnej intensywności regionalnej pomocy inwestycyjnej, o której mowa w Rozporządzeniu Rady Ministrów z dnia 13 października 2006 r. w sprawie ustalenia mapy pomocy regionalnej.
 	
 	2. Następujących kryteriów:
-		1. wielkość efektu ekologicznego osiągniętego poprzez realizację zadania,
-		2. zastosowany system ogrzewania, wg priorytetów określonych w POP,
-		3. termin złożenia wniosku,
-		4. realizacja zadania na terenach uzdrowiskowych w Swoszowicach - Dzielnica X Swoszowice,
-		5. lokalizacja zadania, według priorytetów określonych w POP.
+		1. zawarcia umów przyłączeniowych na realizację zadania z sygnatariuszami Porozumienia, o którym mowa w § 2 pkt 8,
+		2. możliwości korzystania z pomocy, o której mowa w paragrafie 4 ust. 2 Programu,
+		3. wielkości efektu ekologicznego osiągniętego poprzez realizację zadania,
+		4. zastosowanego systemu ogrzewania, wg priorytetów określonych w POP,
+		5. terminu i poprawności złożenia wniosku,
+		6. realizacji zadania na Osiedla Uzdrowisko Swoszowice, utworzonego w ramach Dzielnicy X Swoszowice,
+		7. lokalizacji zadania, według priorytetów określonych w POP.
 	3. Informacja o wagach kryteriów oraz priorytetach POP umieszczona będzie w ogłoszeniu o naborze wniosków, o którym mowa w § 6 ust. 4.
 
 		§ 22. 
