UCHWAŁA NR XCVII/1470/14 RADY MIASTA KRAKOWA z dnia 20 lutego 2014 r. w sprawie zmiany uchwały Nr XXI/275/11

--- a/2011/21/275.md
+++ b/2011/21/275.md
@@ -42,7 +42,7 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
     7. Porozumieniu - rozumie się przez to zawarte Porozumienie z dnia 15 maja 2012 roku pomiędzy następującymi sygnatariuszami: Województwem Małopolskim, Wojewódzkim Funduszem Ochrony Środowiska i Gospodarki Wodnej, Gminą Miejską Kraków-Urzędem Miasta Krakowa, Miejskim Przedsiębiorstwem Energetyki Cieplnej S.A w Krakowie, Elektrociepłownią Kraków S.A w Krakowie, Elektrownią Skawina S.A, Polskim Górnictwem Naftowym i Gazownictwem S.A, TAURON Sprzedaż Sp. z o. o w sprawie wspólnych działań zmierzających do zmniejszenia ilości emitowanych do atmosfery zanieczyszczeń pochodzących z procesów spalania paliw stałych.
     8. Prawo ochrony środowiska – rozumie się przez to ustawę z dnia 27 kwietnia 2001 r. Prawo ochrony środowiska ( tekst jedn. Dz. U. z 2008 r. Nr 25, poz. 150 z późn. zm.).
     9. PROGRAMIE – rozumie się przez to Program Ograniczania Niskiej Emisji dla Miasta Krakowa, określający zasady udzielania dotacji na realizację zadań, dofinansowanych z budżetu Miasta Krakowa.
-    10. Przedsiębiorcy - rozumie się przez to, podmiot prowadzący działalność gospodarczą bez względu na jego formę prawną, zgodnie z Rozporządzeniem Komisji (WE) nr 800/2008 z dnia 6 sierpnia 2008 r. uznającym niektóre rodzaje pomocy za zgodne ze wspólnym rynkiem w zastosowaniu art. 87 i 88 Traktatu (ogólne rozporządzenie w sprawie wyłączeń blokowych).
+    10. Przedsiębiorcy – rozumie się przez to podmiot prowadzący działalność gospodarczą bez względu na jego formę prawną, zgodnie z art. 1 Załącznika nr 1 do rozporządzenia Komisji (WE) nr 800/2008 z dnia 6 sierpnia 2008 r. uznającym niektóre rodzaje pomocy za zgodne ze wspólnym rynkiem w zastosowaniu art. 87 i 88 Traktatu (ogólne rozporządzenie w sprawie wyłączeń blokowych) (Dz. U. UE. L. 2008. 214. 3, z późn. zm.)
     11. TFUE - rozumie się przez to Traktat o Funkcjonowaniu Unii Europejskiej.
     12. Udzielającym dotacji – rozumie się przez to Gminę Miejską Kraków-Urząd Miasta Krakowa.
     13. Wspólnocie mieszkaniowej - rozumie się przez to, zgodnie z art. 6 ustawy o własności lokali z dnia 24 czerwca 1994 r. (tj. Dz. U. 2000 Nr 80 poz. 903 z późn. zm.) ogół właścicieli, których lokale wchodzą w skład określonej nieruchomości. Wspólnota mieszkaniowa może nabywać prawa i zaciągać zobowiązania, pozywać i być pozwana.
@@ -200,9 +200,9 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
 
 	§ 17. Dotacja dla przedsiębiorców, stanowi pomoc publiczną w rozumieniu art. 107 TFUE i jest udzielana na realizację zadań:
 	
-	1. obejmujących zmianę systemu ogrzewania bądź podłączenie ciepłej wody użytkowej, udzielana jest jako pomoc de minimis zgodnie z warunkami określonymi w Rozporządzeniu Komisji (WE) nr 1998/2006 z dnia 15 grudnia 2006 r. w sprawie stosowania art. 87 i 88 Traktatu do pomocy de minimis (Dz. Urz. UE L 379 z 28. 12. 2006), oraz Rozporządzeniu Komisji (WE) nr 1535/2007 z dnia 20 grudnia 2007 r. w sprawie stosowania art. 87 i art. 88 Traktatu (WE) w odniesieniu do pomocy de minimis w sektorze produkcji rolnej (Dz. Urz. UE seria L, Nr 337, str. 35 z 21.12.2007 r.), przy czym:
+	1. „obejmujących zmianę systemu ogrzewania, bądź podłączenie ciepłej wody użytkowej, udzielana jest jako pomoc de minimis zgodnie z warunkami określonymi w Rozporządzeniu Komisji (UE) Nr 1407/2013 z dnia 18 grudnia 2013 r. w sprawie stosowania art. 107 i 108 Traktatu o funkcjonowaniu Unii Europejskiej do pomocy de minimis (Dz. Urz. UE L Nr 352 z 24.12.2013 r.) oraz Rozporządzeniu Komisji (UE) Nr 1408/2013 z dnia 18 grudnia 2013 r. w sprawie stosowania art. 107 i 108 Traktatu o funkcjonowaniu Unii Europejskiej do pomocy de minimis w sektorze rolnym (Dz. Urz. UE L Nr 352 z 24.12.2013 r.)
 	
-	2. obejmujących instalację odnawialnych źródeł energii udzielana jest w ramach programu pomocowego zgodnie z warunkami określonymi w Rozporządzeniu Rady Ministrów z dnia 22 grudnia 2006 r. w sprawie ustanowienia programu pomocowego w zakresie regionalnej pomocy publicznej na niektóre inwestycje w ochronie środowiska (Dz. U. z 2006 roku, Nr 246, poz. 1795 z późn. zm.).
+	2. obejmujących instalację odnawialnych źródeł energii udzielana jest w ramach programu pomocowego zgodnie z warunkami określonymi w Rozporządzeniu Ministra Środowiska z dnia 30 grudnia 2013 r. w sprawie szczegółowych warunków udzielania regionalnej pomocy publicznej na niektóre cele z zakresu ochrony środowiska (Dz. U. z 2013 r. poz. 1667).
 
 	§ 18. Dotacja będzie przydzielana w wysokości do 100 % poniesionych kosztów, z zastrzeżeniem zapisów rozporządzenia Rady Ministrów z dnia 13 października 2006 roku w sprawie ustalenia mapy pomocy regionalnej (Dz. U. Nr 190, poz. 1402), ale nie więcej niż:
 	1. 900 zł za każdy kW:
@@ -233,18 +233,17 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
 
 	2. Wnioski wraz z wymaganymi załącznikami należy składać w miejscu i formie wskazanym w ogłoszeniu o udzielaniu dotacji.
 	
-	3. Beneficjenci ubiegający się o udzielenie pomocy publicznej wraz z wnioskiem, o którym mowa w ust. 2, przedkładają również informacje oraz sprawozdania finansowe zgodne z Rozporządzeniem Rady Ministrów z dnia 29 marca 2010 r. w sprawie zakresu informacji przedstawianych przez podmiot ubiegający się o pomoc de minimis (Dz. U. Nr 53, poz. 311) oraz Rozporządzeniem Rady Ministrów z dnia 29 marca 2010 r. w sprawie zakresu informacji przedstawianych przez podmiot ubiegający się o pomoc inną niż de minimis lub pomoc de minimis w rolnictwie lub rybołówstwie (Dz. U. Nr 53, poz. 312), Rozporządzeniem Rady Ministrów z dnia 11 czerwca 2010 roku w sprawie informacji składanych przez podmioty ubiegające się o pomoc de minimis w rolnictwie lubrybołówstwie ( Dz. U. Nr 121, poz. 810).
+	3. Beneficjenci ubiegający się o udzielenie pomocy publicznej wraz z wnioskiem, o którym mowa w ust. 2, przedkładają również informacje oraz sprawozdania finansowe zgodnie z Rozporządzeniem Rady Ministrów z dnia 29 marca 2010 r. w sprawie zakresu informacji przedstawianych przez podmiot ubiegający się o pomoc de minimis (Dz. U. z 2010 r. Nr 53, poz. 311 i Dz. U. z 2013 r. poz. 276), Rozporządzeniem Rady Ministrów z dnia 29 marca 2010 r. w sprawie zakresu informacji przedstawianych przez podmiot ubiegający się o pomoc inną niż de minimis lub pomoc de minimis w rolnictwie w rolnictwie lub rybołówstwie (Dz. U. z 2010 r. Nr 53, poz. 312 oraz Nr 254, poz. 1704), Rozporządzeniem Rady Ministrów z dnia 11 czerwca 2010 roku w sprawie informacji składanych przez podmioty ubiegające się o pomoc de minimis w rolnictwie lub rybołówstwie (Dz. U. Nr 121, poz. 810).
 	
 	4. Beneficjenci ubiegający się o udzielenie pomocy publicznej zobowiązany jest do przedłożenia w żądanym terminie – na wniosek właściwego Wydziału – dodatkowych informacji niezbędnych dla jej oceny oraz prawidłowego udzielenia.
 	
 	§ 21. Prawidłowo złożone wnioski rozpatrywane będą z uwzględnieniem:
 	1. Zachowania wszystkich warunków, uprawniających do otrzymania pomocy, o której mowa w § 17, w tym w szczególności
 	
-	   1. beneficjent prowadzący działalność gospodarczą (za wyjątkiem prowadzącego działalność w sektorze transportu drogowego), przy zachowaniu wszystkich warunków określonych w programie, może otrzymać dotację stanowiącą pomoc de minimis, jeżeli wartość pomocy brutto łącznie z wartością innej pomocy de minimis otrzymanej przez niego w okresie bieżącego roku kalendarzowego oraz dwóch poprzedzających go lat kalendarzowych nie przekracza kwoty stanowiącej 200 tys. Euro,
+	   1. beneficjent prowadzący działalność gospodarczą, z wyłączeniem działalności zarobkowej w zakresie drogowego transportu towarów, przy zachowaniu wszystkich warunków określonych w Programie, może otrzymać dotację stanowiącą pomoc de minimis, jeżeli wartość pomocy brutto łącznie z wartością innej pomocy de minimis otrzymanej przez niego w okresie trzech lat podatkowych nie przekracza kwoty stanowiącej 200 000 euro,
+	   2. beneficjent prowadzący działalność zarobkową w zakresie transportu drogowego towarów, przy zachowaniu wszystkich warunków określonych w Programie, może otrzymać dotację stanowiącą pomoc. Podpisany Strona de minimis, jeżeli wartość tej pomocy brutto łącznie z wartością innej pomocy otrzymanej przez niego w okresie trzech lat podatkowych nie przekracza kwoty stanowiącej 100 000 euro.,
 	
-	   2. beneficjent prowadzący działalność gospodarczą w sektorze transportu drogowego, przy zachowaniu wszystkich warunków określonych w Programie, może otrzymać pomoc, o której mowa w § 17, jeżeli wartość tej pomocy brutto łącznie z wartością innej pomocy otrzymanej przez niego w okresie bieżącego roku kalendarzowego oraz dwóch poprzedzających go lat kalendarzowych nie przekracza kwoty stanowiącej 100 tys. Euro,
-	
-	   3. beneficjent prowadzący działalność gospodarczą w sektorze produkcji rolnej, przy zachowaniu wszystkich warunków określonych w Programie, może otrzymać pomoc, o której mowa w § 17, jeżeli wartość tej pomocy brutto łącznie z wartością innej pomocy otrzymanej przez niego w okresie bieżącego roku kalendarzowego oraz dwóch poprzedzających go lat kalendarzowych nie przekracza kwoty stanowiącej 7,5 tys. Euro,
+	   3. beneficjent prowadzący działalność gospodarczą w sektorze produkcji rolnej, przy zachowaniu wszystkich warunków określonych w Programie, może otrzymać dotację stanowiącą pomoc de minimis, jeżeli wartość tej pomocy brutto łącznie z wartością innej pomocy otrzymanej przez niego w okresie trzech lat podatkowych nie przekracza kwoty stanowiącej 15 000 euro,
 	   4. maksymalnej intensywności regionalnej pomocy inwestycyjnej, o której mowa w Rozporządzeniu Rady Ministrów z dnia 13 października 2006 r. w sprawie ustalenia mapy pomocy regionalnej.
 	
 	2. Następujących kryteriów:
