Projekt poprawki 'Ostatni rok ze smogiem'

--- a/2011/21/275.md
+++ b/2011/21/275.md
@@ -102,14 +102,22 @@ Nr 142, poz. 1591 z późn. zm.) oraz art. 403 ust. 5 ustawy Prawo ochrony środ
          3. budowę zewnętrznych sieci ciepłowniczych, energetycznych i gazowych,
          4. zakup urządzeń grzewczych nie stanowiących trwałego wyposażenia mieszkań.
 
-	4. Przyznawanie dotacji odbywa się na wniosek o udzielenie dotacji, zwany dalej wnioskiem, złożony w sposób określony w ogłoszeniu o naborze wniosków w danym roku w ramach PROGRAMU, zamieszczonym w Biuletynie Informacji Publicznej.
+	4. Przyznawanie dotacji odbywa się na wniosek o udzielenie dotacji, zwany dalej wnioskiem, złożony w sposób określony w ogłoszeniu o naborze wniosków w danym roku w ramach PROGRAMU, zamieszczonym w Biuletynie Informacji Publicznej. Złożenie wniosku następuje wyłącznie w formie elektronicznej wraz z podaniem adresu emailowego służącego do prowadzenia korespondencji. Zatwierdzenie złożenia wniosku i potwierdzenie poprawności złożonych danych następuje w formie pisemnej. Ostateczny termin składania wniosków mija z dniem 1.09.2015. Beneficjent, który złoży poprawny wniosek do dnia 1.04.2015 otrzymuje 1000 zł premię dodawaną do dotacji. Premia pochodzi wyłącznie z środków budżetu miasta Krakowa 
 	5. W przypadku wystąpienia wolnych środków finansowych zarezerwowanych w budżecie Miasta Krakowa na zadania, o których mowa w § 6 ust. 1 lub pozyskania dodatkowych środków finansowych z innych źródeł, dopuszcza się możliwość kontynuowania rozpatrywania złożonych wniosków lub ogłoszenia kolejnego naboru wniosków w roku budżetowym. Realizacja takich wniosków odbywa się zgodnie z zasadami regulującymi wydatkowanie tych środków.
 	6. Warunkiem przekazania dotacji jest zawarcie umowy w formie pisemnej i jej realizacja na zasadach określonych w PROGRAMIE oraz ogłoszeniu, o którym mowa w pkt 4.
 	7. Rozstrzygnięcie o przyznaniu dotacji nie jest decyzją administracyjną w rozumieniu przepisów Kodeksu postępowania administracyjnego i nie przysługuje na nie odwołanie.
 	8. Dotacja nie może pokrywać wydatków przeznaczonych na ten sam cel finansowanych z innych bezzwrotnych źródeł (zakaz tzw. podwójnego finansowania).
+	9. Za pisemną zgodą beneficjenta, dopuszcza się możliwość złożenia wniosku przez inny podmiot, zwany dalej „inwestorem zastępczym”, który bezpośrednio lub pośrednio wykonuje czynności określone w par 6 ust 2. Zmiana lub wycofanie wniosku wymaga zgody beneficjenta i inwestora zastępczego wyrażonej w formie aktu notarialnego.
+	
     § 7. 
-    1. Przyznawanie dotacji odbywa się do wysokości środków finansowych zarezerwowanych na ten cel w budżecie Miasta Krakowa.
+    1. Przyznawanie dotacji odbywa się do wysokości środków finansowych zarezerwowanych na ten cel w budżecie Miasta Krakowa lub na podstawie Wieloletniej Prognozy Finansowej Miasta Krakowa w przypadkach określonych w par 7a ust 3
     2. Wysokość środków, o których mowa w § 7 ust. 1, podawana będzie corocznie w ogłoszeniu o naborze wniosków do PROGRAMU.
+    3. Kwoty dopłat, o których mowa w rozdziale 3, przysługują tylko beneficjentom, którzy dokonają zakończenia i prawidłowego rozliczenia dotacji do dnia 31.12.2015. Po tym terminie dopłata zostaje obniżona o 50%.
+
+	§ 7a.
+	1. Przy składaniu wniosku beneficjent określa termin otrzymania dotacji.
+	2. „Termin pewny”- otrzymanie dotacji następuje pod warunkiem zapewnienia środków finansowych przewidzianych w budżecie lub projekcie budżetu miasta Krakowa i następuje w ciągu 3 miesięcy od zakończenia i prawidłowego rozliczenia dotacji. W przypadku braku środków finansowych nie obowiązuje obniżenie dopłaty określone w par 7 ust 3 pod warunkiem dokonania zakończenia i prawidłowego rozliczenia dotacji w następnym naborze wniosków do programu w ciągu 12 miesięcy od otrzymania rozstrzygnięcia o przyznaniu dotacji.
+	3. „Termin wydłużony” oraz „termin wydłużony z comiesięczną wypłatą odsetek”- otrzymanie dotacji następuje na podstawie budżetu lub projektu budżetu miasta Krakowa lub Wieloletniej Prognozy Finansowej Miasta Krakowa i będzie dokonane w ciągu 36 miesięcy od momentu zakończenia i prawidłowego rozliczenia dotacji. Za każdy miesiąc do momentu otrzymania dotacji beneficjentowi przysługują odsetki w wysokości 1 procenta miesięcznie płatne przy wypłacie dopłaty („termin wydłużony”) lub 0,5 procenta miesięcznie płatne co miesiąc na konto beneficjenta („termin z comiesięczną wypłatą odsetek”) liczone od momentu zakończenia i prawidłowego rozliczenia dotacji. Beneficjentowi przysługuje prawo określenia w wniosku preferowanego roku otrzymania dotacji z prawem jednorazowej zmiany terminu. Beneficjentowi przysługuje również prawo określenia preferowanego roku otrzymania dotacji po terminie 36 miesięcy od momentu zakończenia i prawidłowego rozliczenia dotacji, nie dłużej jednak niż do 31.12.2024 roku, wraz z możliwością jednorazowej zmiany preferowanego terminu otrzymania dopłaty.
 
     § 8.     
     1. Ogłoszenie o naborze wniosków może nastąpić na podstawie projektu uchwały budżetowej przekazanego Radzie Miasta Krakowa na zasadach określonych w przepisach ustawy z dnia 27 sierpnia 2009 roku o finansach publicznych ( Dz. U. nr 157, poz. 1240 z późn. zm.).    
